4.0.7
	+ Changes to allow provision as ADC
	+ Improve doc for the conf key sodod_prefork
	+ Fix error when removing the sogo database in deprovision
	+ Improve config for Sogo, setting up WOWorkersCount to 3 from 1
	+ Fixed unsaved changes precondition
	+ Add Ubuntu standard document root to apache virtual servers
4.0.6
	+ Fixed postinst script
4.0.5
	+ sogod is now properly managed by zentyal-openchange
4.0.4
	+ Restart sogod when sogo package is upgraded
	+ Set RPC Proxy log level to debug only when debug is enabled
	+ ActiveSync needs to have a HTTPS webmail enabled. Also handling
	  Z-Push config files
	+ Updated vdomains model strings warning about HTTP usage
	+ Fixed backup/restore
	+ ActiveSync needs to have a HTTPS webmail enabled
4.0.3
	+ Fixed regresion on save changes popup on deprovision
	+ Migrate SOGo database when upgrading from 3.5
4.0.2
	+ zentyal-sogo package removal management
4.0.1
	+ Cache DomainTable DNS model in VDomains to avoid querying it in
	  acquirers
	+ Fix problems with some translations on CA name with non-ASCII chars
	+ Disable HTTPS and SSL options for vdomain after certificate is revoked
	+ When removing user delete its sogo database rows
	+ Raise error on wizard when the user enter unsupported characters
	  for the CA
4.0
	+ Make sure no repeated preconditons are shown
	+ OpenChange users can have mail accounts on different virtual domains
	+ Add conf file for openchange module, containing broker config for
	  mapiproxy server
	+ Use separate apache log files for ocsmanager
	+ Recreate openchange certificate if it is not the correct one
	+ Allow to customize CA attributes on initial configuration wizard
	+ RPC proxy is available in web interface when you have only
	  internal interfaces
	+ Provision action triggers save changes action
	+ Fixed deprovision
	+ OpenChange account is enabled by default for all the new created users
	+ Adapt to changes in Out Of Office implementation in OCSManager